# mish

./: Cargo.toml  LICENSE  README.md
examples/: basic.rs
src/: lib.rs  tr.rs
src/funcs/: m.rs  mod.rs  n.rs  o.rs
src/funcs/t/: consts.rs  h.rs  hinv.rs  inv.rs  mod.rs  t.rs
src/prelude/: f32.rs  f64.rs  mod.rs
tests/: main.rs
